--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,8 @@
 	<script type="text/javascript">
 		var _Qma = {
 			alias :{
-				main : 'script/main'
-				time 	: 'script/time.js'
+				main 	: 'script/main',
+				time 	: 'script/time'
 			}
 		}
 	</script>
